gap-fixed

--- a/newStyle.css
+++ b/newStyle.css
@@ -389,7 +389,9 @@ button {
 
 
 /* animated part css */
-
+.container-lens{
+    margin-top: -40px;
+}
 .left-wrapper {
     display: flex;
     height: 100vh;
@@ -421,9 +423,9 @@ button {
 .iphone{
     z-index: 100;
    height: 70%;
-    box-shadow: rgba(23, 23, 23, 0) 0px 30px 60px -12px, rgba(0, 0, 0, 0) 0px 18px 36px -18px;
+  /* box-shadow:  rgba(136, 165, 191, 0.48) 6px 2px 16px 0px; */
 
-  
+  /* box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px; */
 }
 
 .iphone-wrapper {
@@ -525,7 +527,7 @@ button {
 .mid-section h2{
     font-size: 32px;
     color: var(--primary-color);
-    width: 80%;
+    width: 1120px;
     margin: auto;
     line-height: 160%;
 }
@@ -540,9 +542,14 @@ button {
     width: 352px;
     height: 484px;
 }
+.feature-box img{
+    max-width: 90%;
+}
 .feature-box h2{
     font-size: 24px;
+    font-weight: 600;
 }
+
 @media screen and (max-width:768px) {
     .mid-section h2{
         font-size: 20px;
